extending device details api
